--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -43,7 +43,9 @@ footer{
 
 div.pos {
     position: fixed;
-    bottom: 0px
+    bottom: 0px;
+    width: 100%;
+    height: auto;
 }
 
 footer a, footer span {
