--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -42,8 +42,10 @@ footer{
 }
 
 div.pos {
-    position: fixed;
+    position: relative;
     bottom: 0px;
+    left: 0px;
+    right: 0px;
     width: 100%;
     height: auto;
 }
